@startuml scheme
class User
User : id: str
class UntrustedDatabase
class Reader
class Writer
class Database
class QueryMultiplexer
class DataHost

Reader : secretKey
Reader : PublicKey : G2
Reader : PrivateKey : Fr

Writer : secretKey
DataHost : readerKeys : dict
DataHost : encryptedIndecies : dict
DataHost : encryptedTableAttributes : dict
DataHost : EncryptedDatabase
DataHost : UploadIndex (index)
DataHost : Register (tableName, attributes)
DataHost : addReader(readerId, readerKey)
DataHost : EncryptTable(database, tableName, k, secretKey, realTableName)
DataHost : UploadValues (tableName, values)
DataHost : Search (trapdoor)


QueryMultiplexer : writers : list
QueryMultiplexer : readers : list
QueryMultiplexer : authorizations : dict<list>
QueryMultiplexer : addWriter (id, key)
QueryMultiplexer : addReader (id, key)
QueryMultiplexer : delegate (auth, writerId, readerId)
QueryMultiplexer : transform (trapdoor, readerId)

UntrustedDatabase : Database
UntrustedDatabase : createTable (name, attributes)
UntrustedDatabase : insertIntoTable (name, attributes, values)
UntrustedDatabase : retrieveRecords (name, records)
UntrustedDatabase : getTableRecordLength(name)

Writer : delegate (readerPublicKey, readerId)
Writer : encrypt (tableName)
Writer : updateDatabase (values)

Reader : trapdoor (sqlStatement)

UntrustedDatabase --* DataHost
DataHost *-* QueryMultiplexer
QueryMultiplexer o-- User
DataHost o-- User
User <-- Reader
User <-- Writer
Writer o- Database
@enduml